fixed a bug that caused the text of the title to clip when viewing the webpage on mobile (hopefully)

--- a/css/screen.css
+++ b/css/screen.css
@@ -214,7 +214,8 @@ html {
 
 h1 {
   margin: 1.182em 0 ;
-  font-size: 2.3333em;
+  font-size: 3em;
+  line-height: 1cm;
 }
 
 p {
